--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/framework-bundle": "7.2.*",
         "symfony/http-client": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/stimulus-bundle": "^2.23",
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
