added tailwind configuration

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "ext-iconv": "*",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "7.2.*",
-        "symfony/asset-mapper": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
@@ -20,6 +19,8 @@
         "symfony/runtime": "7.2.*",
         "symfony/stimulus-bundle": "^2.23",
         "symfony/twig-bundle": "7.2.*",
+        "symfony/ux-turbo": "^2.23",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -56,8 +57,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
